--- a/index.html
+++ b/index.html
@@ -17,17 +17,27 @@
         <div id="nav">
             <div class="nav-left">Portfolio</div>
             <div class="nav-right">
+                <a href="#page1">HOME </a>
+                <a href="#page-2">ABOUT US </a>
+                <a href="#page-3">SKILLS</a>
+                <a href="#page-5">CONTACT</a>
+            </div>
+            <i class="ri-menu-search-fill navmenu"></i>
+        </div>
+        <div class="nav-page">
+            <div class="navmunus">
                 <a href="">HOME </a>
                 <a href="#page-2">ABOUT US </a>
-                <a href="">SKILLS</a>
-                <a href="">CONTACT</a>
+                <a href="#page-3">SKILLS</a>
+                <a href="#page-5">CONTACT</a>
             </div>
         </div>
         <div id="main">
             <div id="page1">
                 <div class="first-p1">
                     <div class="card">
-                    <img src="1675485765492.jpg" alt="">
+                        <img src="./portimg.jpeg" alt="">
+                    <!-- <img src="1675485765492.jpg" alt=""> -->
                     <!-- <img src="./WhatsApp Image 2023-08-05 at 9.27.43 PM.jpeg" alt="">
                     <img src="./hacker.jpg" alt=""> -->
                     </div>
